# phosphor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  uniforms.txt  vcpkg.json
editor/: CMakeLists.txt
include/phosphor/: camera.h  camera.hpp  component.h  core.h  engine.h  event.h  event.hpp  filesystem.hpp  imgui.hpp  material.hpp  object.h  object.hpp  phosphor.h  phosphor.hpp  renderer.h  renderer.hpp  scene.h  scene.hpp  script.hpp  shader.h  shader.hpp  texture.hpp  util.hpp  window.hpp
include/phosphor/backends/: opengl_renderer.h  opengl_renderer.hpp  renderer.hpp  vulkan_renderer.hpp
include/phosphor/components/: PrimitiveShape.h
include/phosphor/core/: component.hpp  material.hpp  object.hpp  scene.hpp
include/phosphor/light/: directional.h  light.h  light.hpp  point_light.hpp
include/phosphor/lights/: light.hpp
include/phosphor/mesh/: axis_widget.h  axis_widget.hpp  cube.h  cube.hpp  mesh.h  mesh.hpp  sphere.hpp  worldgrid.h
include/phosphor/scripting/: script.h
include/phosphor/sdl/: rendersys.h
include/phosphor/widgets/: wireframeWidget.hpp
resources/: default_config.json  mesh_common.frag  mesh_common.vert  test.frag  test.vert
scripts/: compileGlsl.py  scanSources.py  sources.cmake
src/: camera.cpp  engine.cpp  event.cpp  main.cpp  material.cpp  mesh.cpp  phosphor.cpp  shader.cpp  texture.cpp  window.cpp
src/engine/: engine.cpp
src/engine/component/: PrimitiveShape.cpp
src/engine/sdl/: sdl_rendersys.cpp
src/light/: directional_light.cpp
src/mesh/: axis_widget.cpp  cube.cpp  sphere.cpp  worldgrid.cpp
src/renderer/: create_renderer.cpp  opengl_renderer.cpp  vulkan_renderer.cpp
test/: CMakeLists.txt
test/resources/: axis_widget_frag.glsl  axis_widget_vert.glsl  frag.glsl  grid_shader_frag.glsl  grid_shader_vert.glsl  vert.glsl
test/src/: main.cpp
